deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-deployment
  namespace: sample
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: days-app
    spec:
      imagePullSecrets:
      - name: github-container-registry-login
      containers:
      - name: days-app-container
        image: ghcr.io/dineshkhannam/gitops:1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: days-app
